commit funcionalidad de logearse, ajuste estetico a la interfaz y gestion de usuarios y contraseñas